@@ -20,12 +20,15 @@ import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.crypto.factory.PasswordEncoderFactories;
 import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.security.web.AuthenticationEntryPoint;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.access.AccessDeniedHandler;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.security.web.authentication.logout.LogoutFilter;
 import org.springframework.web.cors.CorsConfiguration;
 
 import java.util.Collections;
+import java.util.List;
 
 //커스텀 순서 AF(authentication filter) -> AM(authentication manager)
 //         ->AP(authentication provider) -> US(userdetails service)
@@ -37,14 +40,24 @@ public class SecurityConfig {
 
     private final AuthenticationConfiguration authenticationConfiguration;
     private final JwtProvider jwtProvider;
+    private final AuthenticationEntryPoint authenticationEntryPoint;
+    private final AccessDeniedHandler customAccessDeniedHandler;
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         /*URL 접근 권한 설정*/
         http
                 .authorizeHttpRequests(authorizeHttpRequests -> authorizeHttpRequests
+                        .requestMatchers("/v1/my/**").authenticated()
                         .anyRequest().permitAll()
                 );
+
+        http
+                .exceptionHandling( (exception) ->
+                        exception
+                                .authenticationEntryPoint(authenticationEntryPoint)
+                                .accessDeniedHandler(customAccessDeniedHandler)
+                        );
 
         /*세션 무상태 설정*/
         http
@@ -64,7 +77,7 @@ public class SecurityConfig {
 
             CorsConfiguration configuration = new CorsConfiguration();
             // 모든 출처에서 요청 허용 (http://localhost:3000와 같이 주소로 허용가능)
-            configuration.setAllowedOrigins(Collections.singletonList("http://course-maker.net")); // http://localhost:3000와 같이 주소로 허용가능
+            configuration.setAllowedOrigins(List.of("http://course-maker.net", "http://localhost:5173"));
             // HTTP 메소드(GET, POST 등 모든요청)의 요청을 허용합니다.
             configuration.setAllowedMethods(Collections.singletonList("*"));
             // 인증 정보(쿠키, 인증 토큰 등)의 전송을 허용합니다.
@@ -144,7 +157,11 @@ public class SecurityConfig {
          *     INTERMEDIATE_TRAVELER("ROLE_INTERMEDIATE_TRAVELER"),// 중급 여행가
          *     PRO_TRAVELER("ROLE_PRO_TRAVELER");// 프로 여행가
          * */
-        hierarchy.setHierarchy("ROLE_ADMIN > ROLE_PRO_TRAVELER > ROLE_INTERMEDIATE_TRAVELER > ROLE_BEGINNER_TRAVELER");
+        hierarchy.setHierarchy(
+                        "ROLE_ADMIN > ROLE_PRO_TRAVELER \n" +
+                        "ROLE_PRO_TRAVELER > ROLE_INTERMEDIATE_TRAVELER \n" +
+                        "ROLE_INTERMEDIATE_TRAVELER > ROLE_BEGINNER_TRAVELER"
+        );
 
 
         return hierarchy;
